tests/org.eclipse.php.core.tests/workspace/errors/php53/duplicateMethodDeclaration1.pdtt
--TEST--
Test duplicated method
--FILE--
<?php
class Foo {
	public function bar() {}
	public function bar() {}
}
?>
--EXPECT--
[line=4, start=61, end=64] Cannot declare method bar because the name is already in use